gccida/g2/copy_rtx_and_substitute
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2339:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v3; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2340:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2367:4: error: expected ';' after expression
rtx v33; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2367:5: error: use of undeclared identifier 'v33'
rtx v33; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2368:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2368:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2371:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2372:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v38; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2374:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2374:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2376:4: error: expected ';' after expression
rtx v42; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2376:5: error: use of undeclared identifier 'v42'
rtx v42; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2377:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2377:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2393:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2395:4: error: expected ';' after expression
rtx v61; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2395:5: error: use of undeclared identifier 'v61'
rtx v61; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2399:6: error: use of undeclared identifier 'v65'
rtx *v65; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/integrate.c:2402:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v68; // ebp 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_rtx_and_substitute/src/obj/integrate.o] Error 1
